--- a/356F/app/src/main/AndroidManifest.xml
+++ b/356F/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
-            android:label="Sign in"
+            android:name=".MainActivity"
+            android:label="356F"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="356F"></activity>
     </application>
 
 </manifest>
