--- a/356F/app/src/main/AndroidManifest.xml
+++ b/356F/app/src/main/AndroidManifest.xml
@@ -24,10 +24,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="356F">
-
-        </activity>
+            android:name=".MainPage"
+            android:label="@string/title_activity_main_page"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
