--- a/356F 2/app/src/main/AndroidManifest.xml
+++ b/356F 2/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewPostPage"
+            android:name=".ProductDetailPage"
             android:label="@string/title_activity_login_page"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -27,8 +27,9 @@
             android:name=".MainPage"
             android:label="@string/title_activity_main_page"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".LoginPage"></activity>
-        <activity android:name=".profile_page"></activity>
+        <activity android:name=".LoginPage" />
+        <activity android:name=".profile_page" />
+        <activity android:name=".NewPostPage"></activity>
     </application>
 
 </manifest>
