--- a/356F 2/app/src/main/AndroidManifest.xml
+++ b/356F 2/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -19,10 +21,10 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".MainPage" />
         <activity android:name=".MyScorePage" />
         <activity android:name=".profile_page" />
@@ -35,7 +37,11 @@
         <activity android:name=".NewPostPage" />
         <activity android:name=".DealPage" />
         <activity android:name=".ProductDetailPage" />
-        <activity android:name=".OfferPage"></activity>
+        <activity android:name=".OfferPage" />
+        <activity
+            android:name=".RegisterPage"
+            android:label="@string/title_activity_register_page"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
