--- a/356F 2/app/src/main/AndroidManifest.xml
+++ b/356F 2/app/src/main/AndroidManifest.xml
@@ -64,7 +64,8 @@
         <activity
             android:name=".ProductEditPage"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SearchPage"></activity>
+        <activity android:name=".SearchPage" />
+        <activity android:name=".ProductPage"></activity>
     </application>
 
 </manifest>
