--- a/356F 2/app/src/main/AndroidManifest.xml
+++ b/356F 2/app/src/main/AndroidManifest.xml
@@ -64,8 +64,10 @@
         <activity
             android:name=".ProductEditPage"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SearchPage" />
-        <activity android:name=".ProductPage"></activity>
+        <activity android:name=".SearchPage"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ProductPage"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
