Revert "fix product Detail submit button"
This reverts commit dc58db80b83e75460f66e06cacb21d73d33167f4.

--- a/356F 2/app/src/main/AndroidManifest.xml
+++ b/356F 2/app/src/main/AndroidManifest.xml
@@ -64,10 +64,8 @@
         <activity
             android:name=".ProductEditPage"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".SearchPage"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ProductPage"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".SearchPage" />
+        <activity android:name=".ProductPage"></activity>
     </application>
 
 </manifest>
