search result (temp)

--- a/356F 2/app/src/main/AndroidManifest.xml
+++ b/356F 2/app/src/main/AndroidManifest.xml
@@ -65,7 +65,8 @@
             android:name=".ProductEditPage"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".SearchPage" />
-        <activity android:name=".ProductPage"></activity>
+        <activity android:name=".ProductPage" />
+        <activity android:name=".ResultOfSearch"></activity>
     </application>
 
 </manifest>
