--- a/356F 2/app/build.gradle
+++ b/356F 2/app/build.gradle
@@ -24,11 +24,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile project(path: ':slideDateTimePicker1')
+    compile project(path: ':slideDateTimePicker1')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:design:23.4.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
-    compile project(path: ':slideDateTimePicker1')
-    compile project(path: ':slideDateTimePicker1')
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
+    testCompile 'junit:junit:4.12'
 }
